# microservices

./: .env  .gitignore  Dockerfile  README.md  functional-spec-generator.html  init-ws.py  pyproject.toml  requirements.txt  test_functional_specs_report.html
app/: main.py
app/core/: config.py  llm_conf.py  llm_config.py
app/models/: input_schema.py  output_schema.py
app/modules/: generator_module.py
app/signatures/: spec_signature.py
test/: conftest.py  test_contracts.py
tests/: conftest.py  test_contracts.py
tests/integration/: test_functional_specs.py
