[project]
name = "microservices"
version = "0.1.0"
description = ""
authors = [{ name = "LuiPetru", email = "petruzzielloluigi007@gmail.com" }]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = ["fastapi (==0.109.0)", "uvicorn[standard] (==0.27.0)", "pydantic (==2.5.3)", "pydantic-settings (==2.1.0)", "dspy-ai (==2.4.9)", "openai (==1.10.0)", "python-dotenv (==1.0.0)", "httpx (==0.26.0)"]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
[dependency-groups]
dev = [
    "pytest (==7.4.4)",
    "pytest-asyncio (==0.23.3)",
    "pytest-mock (==3.12.0)"
]
